[Web Payments] Hide spinner on CVC error

Bug: 722829
Change-Id: I248e3efe3d31f78d56c4a3047322769ee4f217dc
Reviewed-on: https://chromium-review.googlesource.com/508032
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472887}
Former-commit-id: 1f6af8456c81693146656a175027e39b79ed2a52