chrome/browser/ui/views/payments/payment_request_dialog_view_ids.h
@@ -71,6 +71,7 @@ enum class DialogViewID : int {
 
   // The CVC text field in the unmask sheet.
   CVC_PROMPT_TEXT_FIELD,
+  CVC_ERROR_LABEL,
 
   // The following are the ids for the individual sheets.
   CONTACT_INFO_EDITOR_SHEET,
